--- a/index.html
+++ b/index.html
@@ -4,14 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inmobiliaria</title>
 
     <!-- ESTILOS  -->
     <link rel="stylesheet" href="./src/css/estilos.css">
 </head>
 <body>
-    <h1>Hola mundo!!</h1>
+    <header class="site-header inicio">
+        <div class="contenedor">
+
+        </div><!--Finaliza el contenedor -->
+        <nav>
+            <a href="">Nosotros</a>
+            <a href="">Propiedades</a>
+            <a href="">Contactanos</a>
+        </nav>
+        <h1>Venta de Propiedades Exclusivas</h1>
+    </header><!---Finaliza el encabezado-->
+    
+
+<section>
+        <h2>Nosotros</h2>
+        <h3>Seguridad</h3>
+        <p>bla bla bla bla bla bla</p>
+        <h3>Los mejores precios</h3>
+        <p>bla bla bla bla bla bla</p>
+        <h3>Puntualidad</h3>
+        <p>bla bla bla bla bla bla bla bla</p>
+</section><!--finaliza la seccion Nosotros-->
+
+<section>
+    <h2>Casas y Apartamentos en Venta</h2>
+    <h3>Quinta Valle del Este</h3>
+    <p>Esta hermosa Quinta tiene espectaculares vistas en San Antonio de los Altos, ubicada en una urbanización cerrada, cuenta con tres habitaciones dos baños y 150 metros cuadrados.</p>
+    <p>Precio: $50.000</p>
+    <a href="#">Ver propiedad</a>
+    <h3>Residencias Calipso</h3>
+    <p>Se encuentra ubicada en la avenida San Jorge en Chirimena, cuenta con cuatro habitaciones, dos baños y 210 metros cuadrados</p>
+    <p>Precio: $120.000</p>
+    <a href="#">Ver propiedad</a>
+
+    <a href="#">Ver todas las propiedades</a>
+</section><!--Finaliza seleccion de casas y apartamentos-->
+
+<section>
+<h2>¡Te damos las llaves al paraiso!</h2>
+<p>Llena el formulario para contactarnos</p>
+<a href="#">Contactanos</a>
+</section><!--Finaliza la seccion de conctactos-->
+
+<section>
+    <h2>Testimonios</h2>
+    <blockquote>
+        Excelente atencion al cliente, el personal es muy profesional en su trabajo, fui bien atendido y me ayudaron con la compra de una propiedad.
+    </blockquote>
+    <p>- David Bratt</p>
+</section><!---Finaliza la seccion de Testimonios-->
 </body>
+
+<footer>
+    <p>Todos los derechos reservados 2022 &copy;</p>
+    <p>Programado por David Bratt y Jose Piedra</p>
+</footer>
 
 <script src="./src/js/app.js"></script>
 </html>
+
+<!-- HTML5 David cambios -->
