trabajando en seccion nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inmobiliaria</title>
-
-    <!-- ESTILOS  -->
-    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/nosotros.css">
+    <title>Nosotros</title>
 </head>
 <body>
     <header><!--Empieza el encabezado-->
@@ -28,18 +26,19 @@
                 </ul>
             </nav><!--fin de menu-->
 
-        </div><!--fin de contenedor-->
-        <div class="subtitulo">
-        <h2 class="slogan">¡TE DAMOS LAS LLAVES AL PARAISO!</h2>
-        </div>
-    </header><!---Finaliza el encabezado-->
-    
-<footer>
-    <p>Todos los derechos reservados 2022 &copy;</p>
-    <p>Programado por David Bratt y Jose Piedra</p>
-</footer>
+    <div class="contenido">
+    <h1 class>Nosotros</h1><!--Contenido de nosotros-->
+    <p class>Somos una empresa de bienes inmuebles, dedicadas a las
+        ventas exclusivas de propiedades, tenemos mas de 5 años de experiencia
+        en el mercado satisfaciendo las necesidades de nuestros clientes 
+        y trabajando en conjunto con otras compañías.
 
-<script src="./src/js/app.js"></script>
+        Contamos con personal profesional y con un excelente servicio de
+        atención al cliente a disposición para ayudarlos con cualquier duda 
+        o inconveniente. 
+    </div>
+    </p>
+    </div>
+    </header>
+</body>
 </html>
-
-<!-- HTML5 David cambios -->
