cambios recientes en la rama David

--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/nosotros.css">
-    <title>Nosotros</title>
+    <title>Bienes Inmuebles</title>
 </head>
 <body>
     <header><!--Empieza el encabezado-->
@@ -25,10 +25,11 @@
                     <li><a href="contactanos.html" class="nav__opcion">Contacto</a></li>
                 </ul>
             </nav><!--fin de menu-->
+        </div>
 
     <div class="contenido">
     <h1 class>Nosotros</h1><!--Contenido de nosotros-->
-    <p class>Somos una empresa de bienes inmuebles, dedicadas a las
+    <p class="texto_informativo">Somos una empresa de bienes inmuebles, dedicadas a las
         ventas exclusivas de propiedades, tenemos mas de 5 años de experiencia
         en el mercado satisfaciendo las necesidades de nuestros clientes 
         y trabajando en conjunto con otras compañías.
@@ -38,7 +39,7 @@
         o inconveniente. 
     </div>
     </p>
-    </div>
+   
     </header>
 </body>
 </html>
