--- a/index.html
+++ b/index.html
@@ -5,40 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienes Inmuebles</title>
-
+    <link rel="shortcut icon" href="./imagenes/house-solid.svg" type="image/x-icon">
     <!-- ESTILOS  -->
     <link rel="stylesheet" href="./src/css/estilos.css">
 </head>
 <body>
-    <header><!--Empieza el encabezado-->
+    <!-- LEER SOBRE SPA (single page application) esto para entender como estructurar una pagina en un solo documento -->
+    <!-- al igual que buscar que es una lading page y entender su estructura asi como porque no esta bien dividirla en secciones si los demás documentos son como si estuvieran en una pagina -->
+    <!-- TE DEJARE UN EJEMPLO A BAJO DE LAS SECCIONES Y TE RECOMIENDO ESTOS VIDEO  -->
+    <!-- https://www.youtube.com/watch?v=oj1cwYKKqp8 -->
+    <!-- https://evntossv.neocities.org/maquetacion.html -->
+    <!-- https://medium.com/@worldtechmakers/tips-para-maquetar-una-página-web-bc6b6788be1 -->
+    <!-- https://www.laurachuburu.com.ar/tutoriales/enlaces-html.php -->
 
+    <header><!--Empieza el encabezado-->
         <!--Contenedor de logo, titulo y menu -->
         <div class="contenedor">
-
                 <img src="imagenes/insurance.png" alt="" class="logo__img"> <!--logo-->
-
                 <h2 class="logo__titulo">Bienes Inmuebles</h2> <!--titulo-->
-
             <nav> <!--Menu-->
                 <ul class="nav">
                     <li><a href="index.html" class="nav__opcion">Inicio</a></li>
+                    <!-- esto es el ejemplo que te digo también investigas las propiedades css para que cuando vaya a esa sección sea lo mas suave posible-->
+                    <!-- <li><a href="#Nosotros" class="nav__opcion">Nosotros</a></li> -->
                     <li><a href="nosotros.html" class="nav__opcion">Nosotros</a></li>
                     <li><a href="propiedades.html" class="nav__opcion">Propiedades</a></li>
                     <li><a href="contactanos.html" class="nav__opcion">Contacto</a></li>
                 </ul>
             </nav><!--fin de menu-->
-
         </div><!--fin de contenedor-->
         <div class="subtitulo">
-        <h2 class="slogan">¡TE DAMOS LAS LLAVES AL PARAISO!</h2>
+        <h2 class="slogan">¡TE DAMOS LAS LLAVES AL PARAÍSO!</h2>
         </div>
     </header><!---Finaliza el encabezado-->
-    
-<footer>
-    <p>Todos los derechos reservados 2022 &copy;</p>
-    <p>Programado por David Bratt y Jose Piedra</p>
-</footer>
-
+    <!-- ESTA ETIQUETA VENDRÍA SIENDO DONDE COLOCAS EL CUERPO DE LO VAYAS A HACER SIN NECESIDAD DE CREAR OTRO DOCUMENTO HTML y asi estructuras todo por secciones usando la etiqueta section revisa los links para que entiendas -->
+    <!-- DESCOMENTA ESTO  
+    <main>
+        <section class="contenedor">
+            <div class="Nosotros" id="Nosotros">
+                <!- Contenido de nosotros ->
+                <h1 class>Nosotros</h1> 
+                <p class="texto_informativo">Somos una empresa de bienes inmuebles, dedicadas a las
+                    ventas exclusivas de propiedades, tenemos mas de 5 años de experiencia
+                    en el mercado satisfaciendo las necesidades de nuestros clientes 
+                    y trabajando en conjunto con otras compañías.
+            
+                    Contamos con personal profesional y con un excelente servicio de
+                    atención al cliente a disposición para ayudarlos con cualquier duda 
+                    o inconveniente. 
+                </div>
+        </section>
+    </main> -->
+    <footer>
+        <p>Todos los derechos reservados 2022 &copy;</p>
+        <p>Programado por David Bratt y Jose Piedra</p>
+    </footer>
+</body>
 <script src="./src/js/app.js"></script>
 </html>
 
